# DynDNS

./: .env  .gitignore  Cargo.toml  README.md  dyndns.db
src/: database.rs  email.rs  main.rs  web.rs
