[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
imap = "2.4.1"
native-tls = "0.2.11"
reqwest = "0.12.2"
rusqlite = "0.31.0"
scraper = "0.19.0"
thirtyfour = "0.31.0"
tokio = "1.36.0"
